feat: Implement Superadmin Dashboard and Production Readiness
- Added Owner/Superadmin Dashboard with live metrics
- Implemented AdminDashboardController with efficient direct DB queries
- Added Tenant Isolation checks (TenantScope, withoutTenantScope)
- Implemented Event logging and Activity tracking (last_seen_at)
- Added manual owner actions (Suspend, Activate, Bonus Days) with audit logging
- Consolidated Authentication flow with auto-redirects for Superadmins
- Refined Admin UI (Minimalist control panel header)
- Enforced Role-based access control on all admin routes
- Verified billing and trial enforcement middleware

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,8 @@ LOG_SLACK_WEBHOOK_URL=
 
 # Backup Notifications
 BACKUP_NOTIFICATION_EMAIL=
+
+# Owner Superadmin Credentials (for seeder only)
+SUPERADMIN_EMAIL=info@ihrauto.ch
+SUPERADMIN_NAME="Platform Owner"
+SUPERADMIN_PASSWORD=
