feat: Add Resend email service for user verification
- Install resend/resend-laravel package
- Configure Resend as default mailer
- Update render.yaml with email environment variables
- Add mail:test command for testing email configuration

--- a/render.yaml
+++ b/render.yaml
@@ -16,5 +16,14 @@ services:
         value: false
       - key: LOG_CHANNEL
         value: stderr
+      # Email Configuration (Resend)
+      - key: MAIL_MAILER
+        value: resend
+      - key: RESEND_API_KEY
+        sync: false  # Set this secret in Render dashboard
+      - key: MAIL_FROM_ADDRESS
+        value: noreply@ihrauto.ch
+      - key: MAIL_FROM_NAME
+        value: IHRAUTO CRM
       - key: STARTUP_COMMAND
         value: php artisan migrate --force && apache2-foreground
