--- a/.env.example
+++ b/.env.example
@@ -47,14 +47,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+# Email Configuration (Resend)
+MAIL_MAILER=resend
+RESEND_API_KEY=
+MAIL_FROM_ADDRESS="noreply@ihrauto.ch"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# Alternative: SMTP Configuration (uncomment to use)
+# MAIL_MAILER=smtp
+# MAIL_HOST=127.0.0.1
+# MAIL_PORT=2525
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
