--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
+        "resend/resend-laravel": "^1.1",
         "sentry/sentry-laravel": "^4.20",
         "spatie/laravel-backup": "^9.3",
         "spatie/laravel-multitenancy": "^4.0",
