fix: Protect super-admin from deletion and add emergency restore route
CRITICAL: Super-admin should NEVER be deleted.

Changes:
- Cleanup route now checks for tenant_id (super-admins have null)
- Added /restore-super-admin emergency route
- Fixed SuperAdminSeeder to use correct env var names
- Added SUPERADMIN_* env vars to render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -25,5 +25,12 @@ services:
         value: noreply@ihrauto.ch
       - key: MAIL_FROM_NAME
         value: IHRAUTO CRM
+      # Super Admin Credentials (REQUIRED)
+      - key: SUPERADMIN_EMAIL
+        value: info@ihrauto.ch
+      - key: SUPERADMIN_NAME
+        value: Platform Owner
+      - key: SUPERADMIN_PASSWORD
+        sync: false  # Set this secret in Render dashboard
       - key: STARTUP_COMMAND
         value: php artisan migrate --force && apache2-foreground
